objects/OF_CQS_Evento__c.object
<CustomObject>
    <fields>
        <fullName>OF_CQS_Rispetto_Procedura__c</fullName>
        <inlineHelpText>Segnalare l’eventuale mancanza del rispetto dell’area di franco, ritardo nella comunicazione, mancanza di planimetrie degli enti, mancanza di cartografia georadar in cantiere, ecc.</inlineHelpText>
        <label>Rispetto Procedura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>N.P.</fullName>
                    <isActive>false</isActive>
                    <label>N.P.</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>SÃ¬</fullName>
                    <isActive>false</isActive>
                    <label>SÃ¬</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Soggetto_Richiedente__c</fullName>
        <label>Soggetto Richiedente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Stato_Evento__c</fullName>
        <label>Stato Evento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In lavorazione Impresa</fullName>
                    <default>true</default>
                    <label>In lavorazione Impresa</label>
                </value>
                <value>
                    <fullName>In Approvazione Direttore Lavori</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione Direttore Lavori</fullName>
                </value>
                <value>
                    <fullName>Chiuso Approvato</fullName>
                </value>
                <value>
                    <fullName>Chiuso Non Approvato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Stato_Pratica__c</fullName>
        <label>Stato Pratica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aperta</fullName>
                </value>
                <value>
                    <fullName>Sospesa</fullName>
                </value>
                <value>
                    <fullName>Chiuso</fullName>
                </value>
                <value>
                    <fullName>Inserita</fullName>
                    <default>true</default>
                    <label>Inserita</label>
                </value>
                <value>
                    <fullName>In Lavorazione</fullName>
                </value>
                <value>
                    <fullName>Integrata/In Approvazione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Struttura_Danneggiata__c</fullName>
        <label>Struttura Danneggiata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Taglio_Field__c</fullName>
        <label>Taglio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Evento_BP__c</fullName>
        <defaultValue>&quot;Bad Practice&quot;</defaultValue>
        <label>Tipo di Evento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Evento_D__c</fullName>
        <defaultValue>&quot;Danneggiamento&quot;</defaultValue>
        <label>Tipo di Evento</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Evento_I__c</fullName>
        <defaultValue>&quot;Infortunio&quot;</defaultValue>
        <label>Tipo di Evento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Evento_T__c</fullName>
        <defaultValue>&quot;Taglio&quot;</defaultValue>
        <label>Tipo di Evento</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Evento__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo di Evento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Tipo_di_Infortunio__c</fullName>
        <label>Tipo di Infortunio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_ev_Segnalazione_Comune__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segnalazione Comune</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona_Coinvolta__c</fullName>
        <label>Persona Coinvolta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pratica_INAIL__c</fullName>
        <label>Pratica INAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prognosi__c</fullName>
        <label>Giorni di Prognosi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regolare_Segnalazione__c</fullName>
        <inlineHelpText>Il  sotto-servizio era segnalato regolamente</inlineHelpText>
        <label>Regolare Segnalazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rimborso_Riconociuto__c</fullName>
        <label>Rimborso Riconociuto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rimborso_richiesto__c</fullName>
        <label>Rimborso richiesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rispetto_Procedure_Operative__c</fullName>
        <inlineHelpText>Sono state rispettate le procedure operative</inlineHelpText>
        <label>Rispetto Procedure Operative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used by the trigger to send email alert instead of workflow. It should be show only to System Administrator and Data Integration Profile.</description>
        <label>Skip Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sottoservizio__c</fullName>
        <label>Sottoservizio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fibra ottica</fullName>
                </value>
                <value>
                    <fullName>Illuminazione pubblica</fullName>
                </value>
                <value>
                    <fullName>Acqua pubblica</fullName>
                </value>
                <value>
                    <fullName>Rete fognaria</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Rete gas</fullName>
                </value>
                <value>
                    <fullName>Rete telefonica</fullName>
                </value>
                <value>
                    <fullName>Rete elettrica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taglio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taglio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIA__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Evento</label>
    <listViews>
        <fullName>CQS_Bad_Practices</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Impresa_Mandataria__c</columns>
        <columns>OF_CQS_Impresa_Esecutrice_Eventi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OF_CQS_Evento__c.OF_CQS_Bad_Practice</value>
        </filters>
        <label>Bad Practices</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CQS_Danneggiamenti_a_Terzi</fullName>
        <columns>NAME</columns>
        <columns>OF_CQS_Impresa_Esecutrice_Eventi__c</columns>
        <columns>OF_CQS_Impresa_Mandataria__c</columns>
        <columns>CQS_Indice_Gravita_Taglio_Danneggiamento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>mantini</value>
        </filters>
        <label>Danneggiamenti a Terzi</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>OF_CQS_CSE_Centro</role>
            <role>OF_CQS_City_Manager_Centro</role>
            <role>OF_CQS_Direttore_Lavori_Centro</role>
            <role>OF_CQS_Responsabile_Lavori_Centro</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Per_Impresa</fullName>
        <columns>NAME</columns>
        <columns>Numero_Protocollo__c</columns>
        <columns>OF_CQS_Data_Evento__c</columns>
        <columns>OF_CQS_Ente__c</columns>
        <columns>OF_CQS_Oggetto__c</columns>
        <columns>OF_CQS_Area_Cavo__c</columns>
        <columns>OF_CQS_Impresa_Esecutrice_Eventi__c</columns>
        <columns>VIA__c</columns>
        <columns>OF_CQS_Numero_Civico__c</columns>
        <columns>OF_CQS_Diffida__c</columns>
        <columns>OF_CQS_Richiesta_Danni__c</columns>
        <columns>OF_CQS_Inadempienze_Operative__c</columns>
        <columns>OF_CQS_ev_Segnalazione_Comune__c</columns>
        <columns>OF_CQS_Stato_Pratica__c</columns>
        <filterScope>Everything</filterScope>
        <label>Per Impresa</label>
        <language>it</language>
    </listViews>
    <nameField>
        <displayFormat>Inc-{0000000}</displayFormat>
        <label>Evento Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventi</pluralLabel>
    <recordTypes>
        <fullName>Bad_Practice_Aperta</fullName>
        <active>true</active>
        <description>RecordType per mostrare il layout pensato per la fase di lavorazione (Fase Aperta)</description>
        <label>Bad Practice Aperta</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bad_Practice_Chiusa</fullName>
        <active>true</active>
        <label>Bad Practice Chiusa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bad_Practice_Integrata</fullName>
        <active>true</active>
        <label>Bad Practice Integrata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bad_Practice_in_Lavorazione</fullName>
        <active>true</active>
        <label>Bad Practice in Lavorazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>Danneggiamento_a_Terzi_Aperta</fullName>
        <active>true</active>
        <label>Danneggiamento a Terzi Aperta</label>
    </recordTypes>
    <recordTypes>
        <fullName>Danneggiamento_a_Terzi_Chiusa</fullName>
        <active>true</active>
        <label>Danneggiamento a Terzi Chiusa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Danneggiamento_a_Terzi_Integrata</fullName>
        <active>true</active>
        <label>Danneggiamento a Terzi Integrata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Danneggiamento_a_Terzi_in_Lavorazione</fullName>
        <active>true</active>
        <label>Danneggiamento a Terzi in Lavorazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interferenza_a_Sotto_servizi_Aperta</fullName>
        <active>true</active>
        <label>Interferenza a Sotto-servizi Aperta</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interferenza_a_Sotto_servizi_Chiusa</fullName>
        <active>true</active>
        <label>Interferenza a Sotto-servizi Chiusa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interferenza_a_Sotto_servizi_Integrata</fullName>
        <active>true</active>
        <label>Interferenza a Sotto-servizi Integrata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interferenza_a_Sotto_servizi_in_Lavorazione</fullName>
        <active>true</active>
        <label>Interferenza a Sotto-servizi in Lavorazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Bad_Practice</fullName>
        <active>true</active>
        <description>in caso di eventi non identificabili con nessune delle altre categorie</description>
        <label>Bad Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Danni_Arrecati</fullName>
        <active>true</active>
        <description>in caso di eventi riguardanti danni a privati o proprietà pubbliche</description>
        <label>Danneggiamento a Terzi</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Infofortuni_giorni_persi_tagli_danneggiamenti</fullName>
        <active>false</active>
        <label>Infortuni giorni persi e tagli e/o danneggiamenti</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Infortunio</fullName>
        <active>false</active>
        <description>in caso di infortuni riconducibili alle lavorazioni (no incidenti in itinere o esterni alle aree di cantiere)</description>
        <label>Infortunio</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Interferenza_Sottoservizi</fullName>
        <active>true</active>
        <description>in caso di Tagli e/o danneggiamenti delle reti di sotto-servizi esistenti</description>
        <label>Interferenza a Sotto-servizi</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CQS_Ispezione</fullName>
        <active>false</active>
        <label>Ispezione</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Progetto_di_competenza__c</fullName>
        <label>Progetto di competenza</label>
    </sharingReasons>
    <validationRules>
        <fullName>CQS_Controllo_Comuni_Evento</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( 
				OR(OF_CQS_Comune_Text__c = &apos;ALESSANDRIA&apos;,
							OF_CQS_Comune_Text__c = &apos;Alessandria&apos;,
							OF_CQS_Comune_Text__c = &apos;ANCONA&apos;,
							OF_CQS_Comune_Text__c = &apos;Ancona&apos;,
							OF_CQS_Comune_Text__c = &apos;AREZZO&apos;,
							OF_CQS_Comune_Text__c = &apos;Arezzo&apos;,
							OF_CQS_Comune_Text__c = &apos;BARI&apos;,
							OF_CQS_Comune_Text__c = &apos;Bari&apos;,
							OF_CQS_Comune_Text__c = &apos;BERGAMO&apos;,
							OF_CQS_Comune_Text__c = &apos;Bergamo&apos;,
OF_CQS_Comune_Text__c = &apos;BOLOGNA&apos;,
OF_CQS_Comune_Text__c = &apos;Bologna&apos;,
OF_CQS_Comune_Text__c = &apos;BRESCIA&apos;,
OF_CQS_Comune_Text__c = &apos;Brescia&apos;,
							OF_CQS_Comune_Text__c = &apos;BUSTO ARSIZIO&apos;,
							OF_CQS_Comune_Text__c = &apos;Busto Arsizio&apos;,
							OF_CQS_Comune_Text__c = &apos;CAGLIARI&apos;,
							OF_CQS_Comune_Text__c = &apos;Cagliari&apos;,
							OF_CQS_Comune_Text__c = &apos;CATANIA&apos;,
							OF_CQS_Comune_Text__c = &apos;Catania&apos;,
							OF_CQS_Comune_Text__c = &apos;CESENA&apos;,
							OF_CQS_Comune_Text__c = &apos;Cesena&apos;,
							OF_CQS_Comune_Text__c = &apos;FERRARA&apos;,
							OF_CQS_Comune_Text__c = &apos;Ferrara&apos;,
							OF_CQS_Comune_Text__c = &apos;FIRENZE&apos;,
							OF_CQS_Comune_Text__c = &apos;Firenze&apos;,
							OF_CQS_Comune_Text__c = &apos;FORLì&apos;,
							OF_CQS_Comune_Text__c = &apos;FORLI&apos;,
							OF_CQS_Comune_Text__c = &apos;Forlì&apos;,
							OF_CQS_Comune_Text__c = &apos;Forli&apos;,
							OF_CQS_Comune_Text__c = &apos;GROSSETO&apos;,
							OF_CQS_Comune_Text__c = &apos;Grosseto&apos;,
							OF_CQS_Comune_Text__c = &apos;LATINA&apos;,
							OF_CQS_Comune_Text__c = &apos;Latina&apos;,
							OF_CQS_Comune_Text__c = &apos;LIVORNO&apos;,
							OF_CQS_Comune_Text__c = &apos;Livorno&apos;,
							OF_CQS_Comune_Text__c = &apos;MATERA&apos;,
							OF_CQS_Comune_Text__c = &apos;Matera&apos;,
OF_CQS_Comune_Text__c = &apos;MILANO&apos;,
OF_CQS_Comune_Text__c = &apos;Milano&apos;,
							OF_CQS_Comune_Text__c = &apos;MONZA&apos;,
							OF_CQS_Comune_Text__c = &apos;Monza&apos;,
							OF_CQS_Comune_Text__c = &apos;MVM&apos;,
							OF_CQS_Comune_Text__c = &apos;mvm&apos;,
							OF_CQS_Comune_Text__c = &apos;NAPOLI&apos;,
							OF_CQS_Comune_Text__c = &apos;Napoli&apos;,
							OF_CQS_Comune_Text__c = &apos;NOVARA&apos;,
							OF_CQS_Comune_Text__c = &apos;Novara&apos;,
							OF_CQS_Comune_Text__c = &apos;PADOVA&apos;,
							OF_CQS_Comune_Text__c = &apos;Padova&apos;,
							OF_CQS_Comune_Text__c = &apos;PALERMO&apos;,
							OF_CQS_Comune_Text__c = &apos;Palermo&apos;,
							OF_CQS_Comune_Text__c = &apos;PAVIA&apos;,
							OF_CQS_Comune_Text__c = &apos;Pavia&apos;,
							OF_CQS_Comune_Text__c = &apos;PERUGIA&apos;,
							OF_CQS_Comune_Text__c = &apos;Perugia&apos;,
							OF_CQS_Comune_Text__c = &apos;PESCARA&apos;,
							OF_CQS_Comune_Text__c = &apos;Pescara&apos;,
							OF_CQS_Comune_Text__c = &apos;PIACENZA&apos;,
							OF_CQS_Comune_Text__c = &apos;Piacenza&apos;,
							OF_CQS_Comune_Text__c = &apos;PISA&apos;,
							OF_CQS_Comune_Text__c = &apos;Pisa&apos;,
							OF_CQS_Comune_Text__c = &apos;PRATO&apos;,
							OF_CQS_Comune_Text__c = &apos;Prato&apos;,
OF_CQS_Comune_Text__c = &apos;RAVENNA&apos;,
OF_CQS_Comune_Text__c = &apos;Ravenna&apos;,
							OF_CQS_Comune_Text__c = &apos;REGGIO EMILIA&apos;,
							OF_CQS_Comune_Text__c = &apos;Reggio Emilia&apos;,
							OF_CQS_Comune_Text__c = &apos;RIMINI&apos;,
							OF_CQS_Comune_Text__c = &apos;Rimini&apos;,
							OF_CQS_Comune_Text__c = &apos;SALERNO&apos;,
							OF_CQS_Comune_Text__c = &apos;Salerno&apos;,
							OF_CQS_Comune_Text__c = &apos;SASSARI&apos;,
							OF_CQS_Comune_Text__c = &apos;Sassari&apos;,
							OF_CQS_Comune_Text__c = &apos;SIRACUSA&apos;,
							OF_CQS_Comune_Text__c = &apos;Siracusa&apos;,
							OF_CQS_Comune_Text__c = &apos;TERNI&apos;,
							OF_CQS_Comune_Text__c = &apos;Terni&apos;,
OF_CQS_Comune_Text__c = &apos;TORINO&apos;,
OF_CQS_Comune_Text__c = &apos;Torino&apos;,
							OF_CQS_Comune_Text__c = &apos;TREVISO&apos;,
							OF_CQS_Comune_Text__c = &apos;Treviso&apos;,
							OF_CQS_Comune_Text__c = &apos;UDINE&apos;,
							OF_CQS_Comune_Text__c = &apos;Udine&apos;,
						OF_CQS_Comune_Text__c = &apos;VARESE&apos;,
						OF_CQS_Comune_Text__c = &apos;Varese&apos;,
						OF_CQS_Comune_Text__c = &apos;VENEZIA&apos;,
						OF_CQS_Comune_Text__c = &apos;Venezia&apos;,
OF_CQS_Comune_Text__c = &apos;VERCELLI&apos;,
OF_CQS_Comune_Text__c = &apos;Vercelli&apos;,
OF_CQS_Comune_Text__c = &apos;VERONA&apos;,
OF_CQS_Comune_Text__c = &apos;Verona&apos;))</errorConditionFormula>
        <errorDisplayField>OF_CQS_Comune_Text__c</errorDisplayField>
        <errorMessage>Il Comune specificato risulta non valido. Verificare la correttezza dei caratteri inseriti e la gestione di Open Fiber del Comune indicato.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cap_solo_numerico</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(OF_CQS_CAP__c)),!ISNUMBER(OF_CQS_CAP__c))</errorConditionFormula>
        <errorDisplayField>OF_CQS_CAP__c</errorDisplayField>
        <errorMessage>Nel campo Cap è possibile inserire solo caratteri numerici.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impresa_Affidataria_o_Esecutrice_Obb</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(OF_CQS_Impresa_Mandataria__c)   || ISBLANK(OF_CQS_Impresa_Esecutrice_Eventi__c)</errorConditionFormula>
        <errorMessage>I campi Impresa Mandataria e Impresa Esecutrice sono entrambi obbligatori!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indica_la_Tipologia_di_Bad_Practice</fullName>
        <active>true</active>
        <description>Questo campo serve a controllare che almeno una delle checkbox relative alla tipologia di bad practice abbia il flag.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName =&apos;OF_CQS_Bad_Practice&apos;,OF_CQS_Diffida__c = FALSE,OF_CQS_Richiesta_Danni__c = FALSE,OF_CQS_Inadempienze_Operative__c = FALSE, OF_CQS_ev_Segnalazione_Comune__c= FALSE)</errorConditionFormula>
        <errorMessage>Bisogna dichiarare se si stia censendo una diffida, una richiesta danni o una inadempienza operativa, inserendo un flag su almeno  uno dei campi presenti nella sezione &apos;Caratteristiche Evento&apos; in fondo alla pagina.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Infortunio_Dati_Completi</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;OF_CQS_Infortunio&apos;,!ISBLANK(OF_CQS_Data_Chiusura_Pratica__c),ISPICKVAL(OF_CQS_Stato_Pratica__c,&apos;Chiuso&apos;),OF_CQS_Decesso__c = false, OF_CQS_Prognosi_Riservata__c  = false,
ISBLANK(Prognosi__c))</errorConditionFormula>
        <errorMessage>Non è possibile Chiudere una pratica di infortunio senza valorizzare almeno un campo tra Decesso, Prognosi Riservata o Giorni di Prognosi.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Comune_Diverso_da_PG</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND($User.City=&apos;Perugia&apos;, OR(LOWER(OF_CQS_Comune_Text__c)&lt;&gt;&apos;perugia&apos;, UPPER(OF_CQS_Comune_Text__c)&lt;&gt;&apos;PERUGIA&apos;)), AND(ISCHANGED(OF_CQS_Comune_Text__c), OR(LOWER(OF_CQS_Comune_Text__c)&lt;&gt;&apos;perugia&apos;, UPPER(OF_CQS_Comune_Text__c)&lt;&gt;&apos;PERUGIA&apos;)))</errorConditionFormula>
        <errorDisplayField>OF_CQS_Comune__c</errorDisplayField>
        <errorMessage>Attenzione! Hai provato ad inserire una pratica per una città che non è di tua competenza!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Inserimento_Eventi_Futuri</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_CQS_Data_Evento__c    &gt; TODAY(),OF_CQS_Data_Chiusura_Pratica__c &gt; TODAY())</errorConditionFormula>
        <errorMessage>Non è possibile inserire eventi futuri, nè chiudere la pratica con una data futura</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Inserimento_Pratiche_Future</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_CQS_Data_Apertura_Pratica__c   &gt; TODAY(),OF_CQS_Data_Apertura_Pratica__c   &lt; OF_CQS_Data_Evento__c)</errorConditionFormula>
        <errorDisplayField>OF_CQS_Data_Apertura_Pratica__c</errorDisplayField>
        <errorMessage>Non è prevista la possibilità di scegliere come data di apertura di una pratica una data futura, né è possibile aprire una pratica con una data antecedente la data in cui si è verificato l&apos;evento da censire.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Prognosi_su_Decesso</fullName>
        <active>true</active>
        <description>Questa VR serve a controllare che in presenza di flag sulla check box per indicare l’avvenuto “Decesso” non vengano inseriti dei giorni di prognosi.</description>
        <errorConditionFormula>AND(OF_CQS_Decesso__c = True,!ISBLANK(Prognosi__c))</errorConditionFormula>
        <errorDisplayField>Prognosi__c</errorDisplayField>
        <errorMessage>Non è possibile inserire dei giorni di prognosi se all&apos;apertura della pratica è già noto l&apos;avvenuto decesso.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Prognosi_su_Prognosi_Riservata</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OF_CQS_Prognosi_Riservata__c = True,!ISBLANK(Prognosi__c))</errorConditionFormula>
        <errorDisplayField>Prognosi__c</errorDisplayField>
        <errorMessage>Non è possibile inserire il numero di giorni di prognosi, se la prognosi è riservata.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_CQS_ImpresaEsecutricePossibile</fullName>
        <active>false</active>
        <errorConditionFormula>OF_CQS_Comune_Text__c &lt;&gt; $ObjectType.CQS_Collaborazioni__c.Fields.CQS_Comune_Collaborazione__c</errorConditionFormula>
        <errorMessage>Non sembra che l&apos;evento si sia verificato in una situazione di coerenza amministrativa: Controlli che la collaborazione tra l&apos;Esecutrice e la Mandataria sia effettivamente in essere nel comune per l&apos;area cavo  da lei indicata.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>O_Decesso_o_Prognosi_Riservata</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OF_CQS_Prognosi_Riservata__c = True,OF_CQS_Decesso__c  = True)</errorConditionFormula>
        <errorMessage>Spiacente, non è possibile selezionare sia la casella di Prognosi Riservata sia quella di Decesso.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Profondita_solo_numerico</fullName>
        <active>false</active>
        <errorConditionFormula>AND(!ISNUMBER(CQS_Ev_Profondita__c ),CQS_Ev_Profondita__c!=&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>CQS_Ev_Profondita__c</errorDisplayField>
        <errorMessage>Il valore del campo Profondità, da esprimersi in centimetri, può accettare solo caratteri numerici.</errorMessage>
    </validationRules>
</CustomObject>